plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'example.mybatis'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
        options.compilerArgs << "-parameters"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.1'
	implementation 'org.mybatis:mybatis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'mysql:mysql-connector-java'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
	implementation 'com.google.code.findbugs:jsr305:3.0.2'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'ch.qos.logback:logback-core'
	implementation 'ch.qos.logback:logback-classic'
	implementation 'javax.xml.bind:jaxb-api'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'javax.validation:validation-api'
	implementation 'org.springframework.security:spring-security-core'
	implementation 'org.springframework.security:spring-security-web'
	implementation 'org.springframework.security:spring-security-config'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}
